workable dev env

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "build": "concurrently build:*",
+    "build:eleventy": "eleventy",
+    "build:webpack": "webpack --mode=production --node-env=production",
+    "serve": "concurrently npm:serve:*",
+    "serve:eleventy": "eleventy --serve",
+    "serve:webpack": "webpack --mode=development --watch"
   },
   "repository": {
     "type": "git",
@@ -31,9 +32,11 @@
     "@webpack-cli/generators": "^3.0.6",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
+    "concurrently": "^8.1.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.6",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.2",
     "prettier": "^2.8.8",
