--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "concurrently build:*",
+    "build": "npm run build:eleventy & npm run build:webpack",
     "build:eleventy": "eleventy",
     "build:webpack": "webpack --mode=production --node-env=production",
     "serve": "concurrently npm:serve:*",
@@ -36,7 +36,6 @@
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.6",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.2",
     "prettier": "^2.8.8",
