--- a/package.json
+++ b/package.json
@@ -34,6 +34,12 @@
     "babel-loader": "^9.1.2",
     "concurrently": "^8.1.0",
     "css-loader": "^6.8.1",
+    "eslint": "^8.42.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.24",
