--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/svenvs/svenDigital#readme",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "@webpack-cli/generators": "^3.0.6",
@@ -53,6 +54,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0"
+    "bootstrap": "^5.3.0",
+    "masonry-layout": "^4.2.2"
   }
 }
