--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@11ty/eleventy-img": "^3.1.0",
     "bootstrap": "^5.3.0",
+    "imagesloaded": "^5.0.0",
     "masonry-layout": "^4.2.2"
   }
 }
