--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-webpack-project",
   "version": "0.0.7",
   "description": "My webpack project",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build:eleventy & npm run build:webpack",
