--- a/package.json
+++ b/package.json
@@ -1,62 +1,24 @@
 {
-  "name": "my-webpack-project",
-  "version": "0.0.7",
-  "description": "My webpack project",
-  "main": "src/index.js",
+  "name": "svendigital",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build:eleventy & npm run build:webpack",
+    "dev": "concurrently npm:dev:*",
+    "dev:eleventy": "eleventy --serve",
+    "dev:rollup": "rollup --config --watch",
     "build:eleventy": "eleventy",
-    "build:webpack": "webpack --mode=production --node-env=production",
-    "serve": "concurrently npm:serve:*",
-    "serve:eleventy": "eleventy --serve",
-    "serve:webpack": "webpack --mode=development --watch"
+    "build:rollup": "rollup --config",
+    "build": "npm run build:eleventy & npm run build:rollup"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/svenvs/svenDigital.git"
-  },
-  "keywords": [
-    "Blog"
-  ],
-  "author": "Sven van Straalen",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/svenvs/svenDigital/issues"
-  },
-  "homepage": "https://github.com/svenvs/svenDigital#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-    "@babel/core": "^7.22.1",
-    "@babel/preset-env": "^7.22.4",
-    "@webpack-cli/generators": "^3.0.6",
-    "autoprefixer": "^10.4.14",
-    "babel-loader": "^9.1.2",
-    "concurrently": "^8.1.0",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.42.0",
-    "eslint-config-semistandard": "^17.0.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "html-webpack-plugin": "^5.5.1",
-    "mini-css-extract-plugin": "^2.7.6",
-    "postcss": "^8.4.24",
-    "postcss-loader": "^7.3.2",
-    "prettier": "^2.8.8",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.3.1",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.85.1",
-    "webpack-cli": "^5.1.3",
-    "webpack-dev-server": "^4.15.0"
-  },
-  "dependencies": {
-    "@11ty/eleventy-img": "^3.1.0",
-    "bootstrap": "^5.3.0",
-    "imagesloaded": "^5.0.0",
-    "masonry-layout": "^4.2.2"
+    "@11ty/eleventy": "^3.0.0-alpha.13",
+    "@rollup/plugin-image": "^3.0.3",
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
+    "postcss": "^8.4.38",
+    "rollup": "^4.18.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "tailwindcss": "^3.4.4"
   }
 }
